trunk/lispbuilder-opengl/build/gl_1_1.h



/*
 * Datatypes
 */
typedef unsigned int	GLenum;

typedef int		GLint;		/* 4-byte signed */

typedef unsigned int	GLuint;		/* 4-byte unsigned */

typedef int		GLsizei;	/* 4-byte signed */

typedef float		GLfloat;	/* single precision float */

typedef double		GLdouble;	/* double precision float */



GLAPI void GLAPIENTRY glCopyTexSubImage1D( GLenum target, GLint level,
                                           GLint xoffset, GLint x, GLint y,
                                           GLsizei width );



GLAPI void GLAPIENTRY glCopyTexSubImage2D( GLenum target, GLint level,
                                           GLint xoffset, GLint yoffset,
                                           GLint x, GLint y,
                                           GLsizei width, GLsizei height );



/*
 * Evaluators
 */

GLAPI void GLAPIENTRY glMap1d( GLenum target, GLdouble u1, GLdouble u2,
                               GLint stride,
                               GLint order, const GLdouble *points );

GLAPI void GLAPIENTRY glMap1f( GLenum target, GLfloat u1, GLfloat u2,
                               GLint stride,
                               GLint order, const GLfloat *points );


GLAPI void GLAPIENTRY glMap2d( GLenum target,
		     GLdouble u1, GLdouble u2, GLint ustride, GLint uorder,
		     GLdouble v1, GLdouble v2, GLint vstride, GLint vorder,
		     const GLdouble *points );

GLAPI void GLAPIENTRY glMap2f( GLenum target,
		     GLfloat u1, GLfloat u2, GLint ustride, GLint uorder,
		     GLfloat v1, GLfloat v2, GLint vstride, GLint vorder,
		     const GLfloat *points );


GLAPI void GLAPIENTRY glGetMapdv( GLenum target, GLenum query, GLdouble *v );

GLAPI void GLAPIENTRY glGetMapfv( GLenum target, GLenum query, GLfloat *v );

GLAPI void GLAPIENTRY glGetMapiv( GLenum target, GLenum query, GLint *v );


GLAPI void GLAPIENTRY glEvalCoord1d( GLdouble u );

GLAPI void GLAPIENTRY glEvalCoord1f( GLfloat u );


GLAPI void GLAPIENTRY glEvalCoord1dv( const GLdouble *u );

GLAPI void GLAPIENTRY glEvalCoord1fv( const GLfloat *u );


GLAPI void GLAPIENTRY glEvalCoord2d( GLdouble u, GLdouble v );

GLAPI void GLAPIENTRY glEvalCoord2f( GLfloat u, GLfloat v );


GLAPI void GLAPIENTRY glEvalCoord2dv( const GLdouble *u );

GLAPI void GLAPIENTRY glEvalCoord2fv( const GLfloat *u );


GLAPI void GLAPIENTRY glMapGrid1d( GLint un, GLdouble u1, GLdouble u2 );

GLAPI void GLAPIENTRY glMapGrid1f( GLint un, GLfloat u1, GLfloat u2 );


GLAPI void GLAPIENTRY glMapGrid2d( GLint un, GLdouble u1, GLdouble u2,
                                   GLint vn, GLdouble v1, GLdouble v2 );

GLAPI void GLAPIENTRY glMapGrid2f( GLint un, GLfloat u1, GLfloat u2,
                                   GLint vn, GLfloat v1, GLfloat v2 );


GLAPI void GLAPIENTRY glEvalPoint1( GLint i );


GLAPI void GLAPIENTRY glEvalPoint2( GLint i, GLint j );


GLAPI void GLAPIENTRY glEvalMesh1( GLenum mode, GLint i1, GLint i2 );


GLAPI void GLAPIENTRY glEvalMesh2( GLenum mode, GLint i1, GLint i2, GLint j1, GLint j2 );



/*
 * Fog
 */

GLAPI void GLAPIENTRY glFogf( GLenum pname, GLfloat param );


GLAPI void GLAPIENTRY glFogi( GLenum pname, GLint param );


GLAPI void GLAPIENTRY glFogfv( GLenum pname, const GLfloat *params );


GLAPI void GLAPIENTRY glFogiv( GLenum pname, const GLint *params );



/*
 * Selection and Feedback
 */

GLAPI void GLAPIENTRY glFeedbackBuffer( GLsizei size, GLenum type, GLfloat *buffer );


GLAPI void GLAPIENTRY glPassThrough( GLfloat token );


GLAPI void GLAPIENTRY glSelectBuffer( GLsizei size, GLuint *buffer );


GLAPI void GLAPIENTRY glInitNames( void );


GLAPI void GLAPIENTRY glLoadName( GLuint name );


GLAPI void GLAPIENTRY glPushName( GLuint name );


GLAPI void GLAPIENTRY glPopName( void );