lispbuilder-opengl/opengl/gl_1_1.lisp


(defcfun ("glCopyTexSubImage1D" glCopyTexSubImage1D) :void
  (target :unsigned-int)
  (level :int)
  (xoffset :int)
  (x :int)
  (y :int)
  (width :int))

(defcfun ("glCopyTexSubImage2D" glCopyTexSubImage2D) :void
  (target :unsigned-int)
  (level :int)
  (xoffset :int)
  (yoffset :int)
  (x :int)
  (y :int)
  (width :int)
  (height :int))

(defcfun ("glMap1d" glMap1d) :void
  (target :unsigned-int)
  (u1 :double)
  (u2 :double)
  (stride :int)
  (order :int)
  (points :pointer))

(defcfun ("glMap1f" glMap1f) :void
  (target :unsigned-int)
  (u1 :float)
  (u2 :float)
  (stride :int)
  (order :int)
  (points :pointer))

(defcfun ("glMap2d" glMap2d) :void
  (target :unsigned-int)
  (u1 :double)
  (u2 :double)
  (ustride :int)
  (uorder :int)
  (v1 :double)
  (v2 :double)
  (vstride :int)
  (vorder :int)
  (points :pointer))

(defcfun ("glMap2f" glMap2f) :void
  (target :unsigned-int)
  (u1 :float)
  (u2 :float)
  (ustride :int)
  (uorder :int)
  (v1 :float)
  (v2 :float)
  (vstride :int)
  (vorder :int)
  (points :pointer))

(defcfun ("glGetMapdv" glGetMapdv) :void
  (target :unsigned-int)
  (query :unsigned-int)
  (v :pointer))

(defcfun ("glGetMapfv" glGetMapfv) :void
  (target :unsigned-int)
  (query :unsigned-int)
  (v :pointer))

(defcfun ("glGetMapiv" glGetMapiv) :void
  (target :unsigned-int)
  (query :unsigned-int)
  (v :pointer))

(defcfun ("glEvalCoord1d" glEvalCoord1d) :void
  (u :double))

(defcfun ("glEvalCoord1f" glEvalCoord1f) :void
  (u :float))

(defcfun ("glEvalCoord1dv" glEvalCoord1dv) :void
  (u :pointer))

(defcfun ("glEvalCoord1fv" glEvalCoord1fv) :void
  (u :pointer))

(defcfun ("glEvalCoord2d" glEvalCoord2d) :void
  (u :double)
  (v :double))

(defcfun ("glEvalCoord2f" glEvalCoord2f) :void
  (u :float)
  (v :float))

(defcfun ("glEvalCoord2dv" glEvalCoord2dv) :void
  (u :pointer))

(defcfun ("glEvalCoord2fv" glEvalCoord2fv) :void
  (u :pointer))

(defcfun ("glMapGrid1d" glMapGrid1d) :void
  (un :int)
  (u1 :double)
  (u2 :double))

(defcfun ("glMapGrid1f" glMapGrid1f) :void
  (un :int)
  (u1 :float)
  (u2 :float))

(defcfun ("glMapGrid2d" glMapGrid2d) :void
  (un :int)
  (u1 :double)
  (u2 :double)
  (vn :int)
  (v1 :double)
  (v2 :double))

(defcfun ("glMapGrid2f" glMapGrid2f) :void
  (un :int)
  (u1 :float)
  (u2 :float)
  (vn :int)
  (v1 :float)
  (v2 :float))

(defcfun ("glEvalPoint1" glEvalPoint1) :void
  (i :int))

(defcfun ("glEvalPoint2" glEvalPoint2) :void
  (i :int)
  (j :int))

(defcfun ("glEvalMesh1" glEvalMesh1) :void
  (mode :unsigned-int)
  (i1 :int)
  (i2 :int))

(defcfun ("glEvalMesh2" glEvalMesh2) :void
  (mode :unsigned-int)
  (i1 :int)
  (i2 :int)
  (j1 :int)
  (j2 :int))

(defcfun ("glFogf" glFogf) :void
  (pname :unsigned-int)
  (param :float))

(defcfun ("glFogi" glFogi) :void
  (pname :unsigned-int)
  (param :int))

(defcfun ("glFogfv" glFogfv) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glFogiv" glFogiv) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glFeedbackBuffer" glFeedbackBuffer) :void
  (size :int)
  (type :unsigned-int)
  (buffer :pointer))

(defcfun ("glPassThrough" glPassThrough) :void
  (token :float))

(defcfun ("glSelectBuffer" glSelectBuffer) :void
  (size :int)
  (buffer :pointer))

(defcfun ("glInitNames" glInitNames) :void)

(defcfun ("glLoadName" glLoadName) :void
  (name :unsigned-int))

(defcfun ("glPushName" glPushName) :void
  (name :unsigned-int))

(defcfun ("glPopName" glPopName) :void)


